[package]
name = "rust1"
version = "0.1.0"
authors = ["cora32 <cora32@cock.li>"]

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
codegen-units = 4

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'

[dependencies]
rand = "*"
hyper = "*"
tokio-core = "*"
futures = "*"
hyper-tls = "*"
regex = "*"
lazy_static = "*"
ansi_term = "*"
crossbeam = "*"
native-tls = "*"
serde_json = "*"
serde = "*"
serde_derive = "*"
image = "*"
imageproc = "*"
rusttype = "*"